--- a/build.yaml
+++ b/build.yaml
@@ -14,10 +14,8 @@
 ---
 include:
   - board: nice_nano_v2
-    shield: cradio_left
+    shield: kyria_rev3_left nice_view_adapter nice_view
   - board: nice_nano_v2
-    shield: cradio_right
+    shield: kyria_rev3_right nice_view_adapter nice_view
   - board: nice_nano_v2
-    shield: corne_left
-  - board: nice_nano_v2
-    shield: corne_right
+    shield: settings_reset
