Disable nice!view custom widget

--- a/config/kyria_rev3.conf
+++ b/config/kyria_rev3.conf
@@ -9,3 +9,6 @@ CONFIG_ZMK_COMBO_MAX_PRESSED_COMBOS=10
 
 # Increase BT transmit power
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+
+# Disable nice!view custom widget
+CONFIG_NICE_VIEW_WIDGET_STATUS=n
