--- a/config/kyria_rev3.conf
+++ b/config/kyria_rev3.conf
@@ -12,3 +12,4 @@ CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 
 # Disable nice!view custom widget
 CONFIG_NICE_VIEW_WIDGET_STATUS=n
+CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
