--- a/build.yaml
+++ b/build.yaml
@@ -19,3 +19,11 @@ include:
     shield: kyria_rev3_right nice_view_adapter nice_view
   - board: nice_nano_v2
     shield: settings_reset
+  - board: seeeduino_xiao_ble
+    shield: custom_22_dongle
+  - board: seeeduino_xiao_ble
+    shield: custom_22_left
+  - board: seeeduino_xiao_ble
+    shield: custom_22_right
+  - board: seeeduino_xiao_ble
+    shield: settings_reset
