--- a/config/kyria_rev3.conf
+++ b/config/kyria_rev3.conf
@@ -13,3 +13,4 @@ CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 # Disable nice!view custom widget
 CONFIG_NICE_VIEW_WIDGET_STATUS=n
 CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
+CONFIG_ZMK_USB_LOGGING=y
