--- a/config/custom_22.conf
+++ b/config/custom_22.conf
@@ -2,4 +2,4 @@ CONFIG_ZMK_COMBO_MAX_COMBOS_PER_KEY=128
 CONFIG_ZMK_COMBO_MAX_KEYS_PER_COMBO=10
 CONFIG_ZMK_COMBO_MAX_PRESSED_COMBOS=10
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
-CONFIG_ZMK_SLEEP=N
+CONFIG_ZMK_SLEEP=n
