--- a/config/boards/shields/custom-22/custom_22_dongle.conf
+++ b/config/boards/shields/custom-22/custom_22_dongle.conf
@@ -11,3 +11,5 @@ CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
 CONFIG_ZMK_WPM=n
 CONFIG_ZMK_DISPLAY_INVERT=y
 CONFIG_ZMK_USB_LOGGING=y
+CONFIG_ZMK_USB_BOOT=y
+CONFIG_USB_HID_BOOT_PROTOCOL=y
